--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,7 @@
+[workspace]
+members = ["fuzz"]
+exclude = []
+
 [package]
 name = "pxdct"
 version = "0.1.0"
@@ -19,6 +23,7 @@ num-traits = "0.2.19"
 num-complex = "0.4.6"
 pxfm = "0.1.25"
 zaft = "0.1.8"
+rustdct = "0.7.1"
 
 [features]
 default = ["avx", "neon"]
