--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,9 @@ num-complex = "0.4.6"
 pxfm = "0.1.25"
 zaft = "0.2"
 
+[dev-dependencies]
+rand = "0.9.2"
+
 [features]
 default = ["avx", "neon"]
 avx = ["zaft/avx"]
